About me fixed to display on mobile

--- a/styles/about_me.css
+++ b/styles/about_me.css
@@ -13,6 +13,12 @@
   gap: 100px;
 }
 
+.about-me-description {
+  width: 55%;
+  max-width: 480px;
+  display: block;
+}
+
 .about-me-title-container {
   width: 100%;
   display: flex;
@@ -38,12 +44,6 @@
   background-color: #42c9b3;
   flex-grow: 1;
   margin-left: 20px;
-}
-
-.about-me-description {
-  width: 55%;
-  max-width: 480px;
-  display: block;
 }
 
 .about-me-text {
@@ -72,11 +72,11 @@
 
 .about-me-images {
   display: inline-block;
-  max-width: 250px;
-  width: 100%;
-  object-fit: cover;
   border-radius: 5px;
+  object-fit: cover;
+  max-width: 250px;
   margin-top: 36px;
+  width: 100%;
 }
 
 .hobbies-container {
@@ -103,19 +103,47 @@
   border: 1px solid #42c9b3;
 }
 
+@media (max-width: 768px) {
+  .about-me-main-container{
+    padding: 20px 0px;
+  }
 
-@media (max-width: 768px){
-    /* ABOUT ME */
-    .about-me-description-container{
-      display: block;
-    }
-  
-    .about-me-blank-space{
-      width: 0%;
-    }
-  
-    .about-me-separator {
-      margin-right: 100px;
-    }
+  .about-me-description-container {
+    display: block;
+  }
+
+  .about-me-description{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px 20px;
+  }
+
+  .about-me-blank-space {
+    width: 0%;
+  }
+
+  .about-me-separator {
+    margin-right: 20px;
+  }
+
+  .about-me-text{
+    font-size: 12px;
+    padding-bottom: 2px;
+    text-align: justify;
+  }
+
+  .about-me-imgs-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 100%;
+  }
+
+  .hobbies-container {
+    max-width: 250px;
   }
   
+}
